--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,14 @@
-
+body{
+  background-color: #c8d8e4;
+  font-family: Helvetica,Arial,sans-serif;
+}
+.navbg{
+  background-color: #2b6777;
+}
+.brandCustom{
+  color: #c8d8e4;
+  font-family: Helvetica,Arial,sans-serif;;
+}
+.colbg{
+background-color: #52ab98;
+}
